# holochain-facets

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
dnas/hc_facets/workdir/: dna.yaml
dnas/hc_facets/zomes/coordinator/hc_facets/: Cargo.toml
dnas/hc_facets/zomes/coordinator/hc_facets/src/: all_groups.rs  facet_group.rs  facet_group_to_facet_options.rs  facet_option.rs  facet_option_to_facet_values.rs  facet_value.rs  lib.rs
dnas/hc_facets/zomes/integrity/hc_facets/: Cargo.toml
dnas/hc_facets/zomes/integrity/hc_facets/src/: facet_group.rs  facet_group_to_facet_options.rs  facet_option.rs  facet_option_to_facet_values.rs  facet_value.rs  lib.rs
tests/src/hc_facets/hc_facets/: all-groups.test.ts  common.ts  facet-group-to-facet-options.test.ts  facet-group.test.ts  facet-option-to-facet-values.test.ts  facet-option.test.ts  facet-value.test.ts
ui/: package.json
ui/src/: App.svelte
ui/src/hc_facets/hc_facets/: AllGroups.svelte  CreateFacetGroup.svelte  CreateFacetOption.svelte  CreateFacetValue.svelte  EditFacetGroup.svelte  EditFacetOption.svelte  EditFacetValue.svelte  FacetGroupDetail.svelte  FacetGroupsForFacetOption.svelte  FacetOptionDetail.svelte  FacetOptionsForFacetGroup.svelte  FacetOptionsForFacetValue.svelte  FacetValueDetail.svelte  FacetValuesForFacetOption.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
